--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=URL-shortening
 
 spring.datasource.url=jdbc:h2:mem:url_shortener
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=ak
+spring.datasource.username=h2
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
